# scorchd

./: CLAUDE.md  PROTOCOL.md  README.md  print.py  pyproject.toml  scorchd.service  thermal-printer.service
scorchd/: __main__.py
