[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorchd"
version = "0.1.0"
description = "iPrint BLE thermal printer daemon and CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=3.0.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
]

[project.scripts]
scorchd = "scorchd.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["scorchd"]
